--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Todo-List</title>
 
     <!--it is used to connect the css file with html file-->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
@@ -41,6 +41,6 @@
     </div>
 
     <!-- link javascript file with html-->
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
